# june-21

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
distribLinux/: june-21.csd
distribLinux/presets/: FACTORYB.SYX
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.css  style.scss
plugins/junosyxloader/: CMakeLists.txt
plugins/junosyxloader/src/: outnames.txt
src/: README.md
src/cabbage-module/: june-21.csd  june-21.txt
src/cabbage-module/presets/: USERCART.SYX
src/doc/: manual.texi
src/plugins/junosyxloader/cmake/: toolchain-w64.cmake
src/plugins/junosyxloader/cmake/Modules/: FindCsound.cmake
src/plugins/junosyxloader/src/: Makefile  jsl  jsl.c  jsl.c~  out.txt  out.txt~  outnames.txt~
src/xcfs/: lcdcharsv3.xcf  lcdpanel.xcf  newwaves1.xcf  sub.xcf
